--- a/spms.css
+++ b/spms.css
@@ -160,8 +160,8 @@ body{
     height:36x;
     border: 1px solid;
     cursor: pointer;
-    border-radius: 
-    5px;font-size: 14px;
+    border-radius:5px;
+    font-size: 14px;
     letter-spacing:2px;
     font-weight: bold;
     text-transform:uppercase; 
